new URL class is changed to a URI class